Templates: Major template overhaul.
Generally fixed standards.
Made them more readable, added more information.

--- a/templates/404.html
+++ b/templates/404.html
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block content %}
-        <p> We could not find the page you requested in our web space: </p>
-        {{url}}
-        <p> Click here to return <a href="{{baseurl}}/">home</a>! </p>
+    <p> We could not find the page you requested in our web space: </p>
+    <ul><li>{{url}}</li></ul>
+    <p> Click here to return <a href="{{baseurl}}/">home</a> </p>
 {% endblock %}
