--- a/templates/scriptcommits.html
+++ b/templates/scriptcommits.html
@@ -16,14 +16,21 @@
             </tr>
         {% for commit in commits %}
             <tr>
-                <td> <a href="{{baseurl}}/commit/{{ commit.id }}">
-                        {{ commit.id }} </a> </td>
-                <td> {{ commit.timeadd }} </td>
-                <td> <a href="{{baseurl}}/user/{{ commit.user.id }}">
-                        {{ commit.user.name }}</a>
+                <td>
+                    <a href="{{baseurl}}/commit/{{ commit.id }}">
+                        {{ commit.id }}
+                    </a>
+                </td>
+                <td>
+                    {{ commit.timeadd }}
+                </td>
+                <td>
+                    <a href="{{baseurl}}/user/{{ commit.user.id }}">
+                        {{ commit.user.name }}
+                    </a>
                 
                 <a href="{{baseurl}}/user/{{commit.user.id}}/script/{{script.id}}">
-                    (commits by user)
+                    (Show commits only from {{commit.user.name}})
                 </a>
                 </td>
             </tr>
@@ -32,15 +39,22 @@
 
         <p>
         {% if pageid > 1 %}
-        <a href="{{baseurl}}/script/{{script.id}}/commits/{{ pageid - 1 }}">prev</a>
-        <a href="{{baseurl}}/script/{{script.id}}/commits/{{ pageid + 1 }}">next</a>
+        <a href="{{baseurl}}/script/{{script.id}}/commits/{{ pageid - 1 }}">
+            prev
+        </a>
+        <a href="{{baseurl}}/script/{{script.id}}/commits/{{ pageid + 1 }}">
+            next
+        </a>
         {% else %}
-        <a href="{{baseurl}}/script/{{script.id}}/commits/{{ pageid + 1 }}">next</a>
+        <a href="{{baseurl}}/script/{{script.id}}/commits/{{ pageid + 1 }}">
+            next
+        </a>
         {% endif %}
         </p>
 
     {% else %}
 
     <p> How now, brown cow? (No more commits) </p>
+
     {% endif %}
 {% endblock %}
