--- a/templates/scripts.html
+++ b/templates/scripts.html
@@ -14,13 +14,17 @@
             </tr>
         {% for script in scripts %}
             <tr>
-                <td> {{ script[2] }} </td>
+                <td>
+                    {{ script[2] }}
+                </td>
                 <td> 
                     <a href="{{baseurl}}/script/{{ script[2] }}">
                         {{ script[1] }}
                     </a>
                 </td>
-                <td> {{ script[0] }} </td>
+                <td>
+                    {{ script[0] }}
+                </td>
             </tr>
         {% endfor %}
         </table>
