--- a/templates/variable.html
+++ b/templates/variable.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-    Variable {{ variable.name }})
+    Variable {{ variable.name }}
 {% endblock %}
 
 {% block content %}
