Stats: Add initial variable management
Added three rules; added several templates.
Renaming works. All that's left is ``Create New'' and actual permissions for
managing variables. (Will require an ALTER TABLE)

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,10 @@
                 My Scripts
             </a>
 
+            <a href="{{baseurl}}/manage/variables/">
+                Manage Variables
+            </a>
+
             <a href="{{baseurl}}/logout">
                 Log out ({{ session['loggedin_name'] }})
             </a>
