Templates: Fix HTML issue.

--- a/templates/base.html
+++ b/templates/base.html
@@ -135,7 +135,7 @@
             Project Homepage </a>
     </div>
     <a href="http://www.vim.org/">
-        <img src="http://www.vim.org/images/vim_created.gif"</img>
+        <img src="http://www.vim.org/images/vim_created.gif"></img>
     </a>
     <div class="right"><a href="http://templates.arcsin.se/">Website
             template</a> by <a href="http://arcsin.se/">Arcsin</a></div>
