--- a/templates/managevariables.html
+++ b/templates/managevariables.html
@@ -30,10 +30,10 @@
 
     <p>
     {% if pageid > 1 %}
-    <a href="{{baseurl}}/manage/variables{{ pageid - 1 }}">
+    <a href="{{baseurl}}/manage/variables/{{ pageid - 1 }}">
         prev
     </a>
-    <a href="{{baseurl}}/manage/variables{{ pageid + 1 }}">
+    <a href="{{baseurl}}/manage/variables/{{ pageid + 1 }}">
         next
     </a>
     {% else %}
