--- a/templates/commit.html
+++ b/templates/commit.html
@@ -20,4 +20,7 @@
     </ul>
     {% endif %}
 
+    <p> <a href="/{{baseurl}}/user{{ commit.user.id }}/script/{{ commit.script.id }}">Show only commits by {{ commit.user.name }} to {{ commit.script.name }}
+    </a> </p>
+
 {% endblock %}
