Stats: Add personal page.

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,9 +4,9 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=iso-8859-1"/>
 <meta name="description" content="description"/>
-<meta name="keywords" content="keywords"/> 
-<meta name="author" content="author"/> 
-<link rel="stylesheet" type="text/css" href="/merlijn/static/stats/default.css" media="screen"/>
+<meta name="keywords" content="keywords"/>
+<meta name="author" content="author"/>
+<link rel="stylesheet" type="text/css" href="/static/stats/default.css" media="screen"/>
 <title>{% block title %} SRL Stats {% endblock %}</title>
 </head>
 
@@ -23,8 +23,8 @@
         <div class="navigation">
             {% for nav, name in [
                 (''          , 'Home'),
-                ('user/all'   , 'Users'), 
-                ('script/all' , 'Scripts'), 
+                ('user/all'   , 'Users'),
+                ('script/all' , 'Scripts'),
                 ('commit/all' , 'Commits'),
                 ('variable/all' , 'Variables')
             ]: %}
