--- a/templates/loginform.html
+++ b/templates/loginform.html
@@ -12,7 +12,7 @@
     <p> Redirecting you to your own
     <a href="{{baseurl}}/user/{{user.id}}">page</a>
     in 5 seconds... </p>
-    <meta http-equiv="refresh" content="5 ;URL={{baseurl}}/user/{{user.id}}" />
+    <meta http-equiv="refresh" content="5 ;URL={{baseurl}}" />
 
     {% elif loginfail %}
         <p> Invalid username or password. </p>
