Stats: Add HTTPS compatiblity.

--- a/templates/base.html
+++ b/templates/base.html
@@ -133,12 +133,14 @@
 <div class="footer">
     {% block footer %}
     <div>
-        Created by Merlijn Wajer: <a href="http://wizzup.org/stats">
+        Created by Merlijn Wajer: <a href="//wizzup.org/stats">
             Project Homepage </a>
     </div>
-    <a href="http://www.vim.org/">
-        <img src="http://www.vim.org/images/vim_created.gif"></img>
+    <!-- Vim.org doesn't support HTTPS.
+    <a href="//www.vim.org/">
+        <img src="//www.vim.org/images/vim_created.gif"></img>
     </a>
+    -->
     <div class="right"><a href="http://templates.arcsin.se/">Website
             template</a> by <a href="http://arcsin.se/">Arcsin</a></div>
     {% endblock %}
